Air_rtl.css
/* ... */
.pun .top-box div {
	height: 18px;
	margin-right: 50%;
	background: url(Air_rtl/img/main_top.png) top left no-repeat;
}

.pun .end-box {
	margin-top: -17px;
	height: 18px;
	position: relative;
	background: url(Air_rtl/img/main_end.png) bottom right no-repeat;
}

.pun .end-box div {
	height: 18px;
	margin-right: 50%;
	background: url(Air_rtl/img/main_end.png) bottom left no-repeat;
}

#punredirect h2, #punmaint h2 {
	border-bottom-style: dotted;
	border-bottom-width: 1px;
	margin-bottom: 3px;
}

/* Section Spacing and Borders
----------------------------------------------------------------*/

#brdmain {
	border-style: solid none;
	border-width: 2px 0;
	margin-bottom: 12px;
	padding: 12px 0;
}

#punindex #brdmain {
	padding-top: 24px;
}

#punredirect #brdmain, #punmaint #brdmain {
	border: 0;
	margin: 0;
	padding: 0;
}

#brdstats {
	border-style: solid none none none;
	border-width: 2px 0 0 0;
	margin-top: 24px;
	padding-top: 12px;
}

#quickpost {
	border-style: solid none none none;
	border-width: 2px 0 0 0;
	margin-top: 12px;
	padding-top: 12px;
}

#announce {
	border-style: solid none none none;
	border-width: 2px 0 0 0;
	padding-top: 3px;
}

/*****************************************************************
3. COMMON BOARD ELEMENTS
*****************************************************************/

/* Logo, Description and Main Menu
----------------------------------------------------------------*/

#brdtitle h1 {
	padding: 0 0 10px 0;
}

#brddesc {
	border-top-style: dotted;
	border-top-width: 1px;
	padding: 10px 0;
}

#brddesc p {
	padding: 0;
}

#brdmenu ul {
	padding: 0;
}

#brdmenu li {
	float: right;
}

#brdmenu a:link, #brdmenu a:visited {
	border-left-style: solid;
	border-width: 1px;
	display: block;
	min-width: 60px;
	padding: 12px 8px 6px 16px;
	white-space: nowrap;
}

#brdmenu a:hover, #brmenu a:active, #brdmenu a:focus {
	text-decoration: none;
}

/* Welcome Box
----------------------------------------------------------------*/

#brdwelcome {
	padding: 10px 0;
}

#brdwelcome .conl, #brdwelcome .conr, #brdwelcome p, #brdwelcome li {
	display: inline;
	padding: 0;
}

#brdwelcome li span {
	background: url(Air_rtl/img/bull.png) center right no-repeat;
	padding-right: 18px;
	margin-left: 3px;
	display: inline-block;
	line-height: normal;
	white-space: nowrap;
}

#brdwelcome .conl li:first-child span {
	padding-right: 0;
	background: none;
}

/* Stats
----------------------------------------------------------------*/

#brdstats .conl {
	float: right;
}

#brdstats .conr {
	float: left;
	text-align: left;
}

#brdstats #onlinelist {
	border-top-style: dotted;
	border-top-width: 1px;
	clear: both;
}

#brdstats #onlinelist dt, #brdstats #onlinelist dd {
	display: inline;
}

/* Footer
----------------------------------------------------------------*/

.pun #modcontrols {
	border-style: none none dotted none;
	border-width: 0 0 1px 0;
	margin-bottom: 4px;
	text-align: center;
	width: 100%;
}

.pun #modcontrols dd {
	display: inline;
}

.pun #brdfooter #modcontrols dd span {
	background: url(Air_rtl/img/bull.png) center right no-repeat;
	display: inline-block;
	line-height: normal;
	padding-right: 18px;
	white-space: nowrap;
}

.pun #brdfooter .conl {
	float: right;
}

.pun #brdfooter .conr {
	text-align: left;
	float: left;
}

.pun #brdfooter #poweredby a {
	font-size: 1.077em;
	font-weight: bold;
}

.pun #brdfooter #qjump {
	padding-top: 5px;
}

.pun #brdfooter #qjump * {
	white-space: nowrap;
}

.pun #brdfooter #searchlinks dd span {
	background: url(Air_rtl/img/bull.png) center right no-repeat;
	display: inline-block;
	line-height: normal;
	padding-right: 18px;
	white-space: nowrap;
}

.pun #brdfooter #feedlinks {
	padding-bottom: 0;
}

.pun #brdfooter #feedlinks span {
	background: url(Air_rtl/img/feed.png) center right no-repeat;
	display: inline-block;
	padding-right: 18px;
	white-space: nowrap;
}

.pun #debugtime {
	border-style: dotted none none none;
	border-width: 1px 0 0 0;
	margin-top: 7px;
	text-align: center;
}

/* Breadcrumbs, Postlink, Pagination
----------------------------------------------------------------*/

.pun .linkst .inbox, .pun linksb .inbox, .pun .postlinksb .inbox {
	overflow: hidden;
}

.pun .linksb, .pun .postlinksb, .pun .linkst, .pun .crumbs {
	clear: both;
	position: relative;
}

.pun .linkst .crumbs {
	font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
	font-size: 1.462em;
	line-height: 1.211em;
	padding: 7px 0;
}

.pun .linksb .crumbs, .pun .postlinksb .crumbs {
	font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
	font-size: 1.154em;
}

.pun .linkst .crumbsplus .pagepost {
	border-top-style: dotted;
	border-top-width: 1px;
}

.pun .linksb .crumbsplus .pagepost, .pun .postlinksb .crumbsplus .pagepost {
	border-bottom-style: dotted;
	border-bottom-width: 1px;
}

.pun .postlinksb .crumbs {
	margin-left: 11em;
}

.pun .crumbs li {
	float:right;
	padding-left: 0.4em;
	white-space: nowrap;
}

.pun .crumbs li strong {
	font-weight: normal;
}

.pun .pagelink {
	float: right;
	white-space: nowrap;
}

.pun .pagelink strong, .pun .pagelink a, .pun .pagelink span.spacer {
	border-style: none solid none none;
	border-width: 0 1px 0 0;
	display: inline-block;
	padding: 0 10px 0 12px;
	margin-left: -6px;
}

.pun .pagelink .item1 {
	border: 0;
}

.pun .pagelink .pages-label {
	display: inline-block;
}

.pun .postlink {
	float: left;
	font-weight: bold;
	text-align: left;
}

.pun .modbuttons {
	float: left;
	padding: 5px 0 3px 0;
}

.pun .modbuttons input {
	margin-right: 8px;
}

.pun .subscribelink {
	position: absolute;
	left: 0;
	text-align: left;
	top: 33px;
}

/*****************************************************************
4. MAIN TABLES
*****************************************************************/

.pun #brdmain .blocktable {
	position: relative;
}
/* ... */

